--- a/public/assets/css/creative.css
+++ b/public/assets/css/creative.css
@@ -517,9 +517,9 @@ header .header-content .header-content-inner hr {
         max-width: 1000px;
     }
     header .header-content .header-content-inner p {
-        margin-right: auto;
+        /* margin-right: auto;
         margin-left: auto;
-        max-width: 80%;
+        max-width: 80%;*/
     }
 }
 .section-heading {
@@ -588,11 +588,11 @@ header .header-content .header-content-inner hr {
     }
     span.ss-calendar {
         font-size: 20px;
-        margin-right: 15px;
+        margin: 0 10px 0 30px;
     }
     span.ss-location {
         font-size: 20px;
-        margin-right: 10px;
+        margin: 0 10px 0 30px;
     }
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
         font-size: 16px;
@@ -601,10 +601,10 @@ header .header-content .header-content-inner hr {
         font-size: 22px;
     }
     .dt-local div:first-child {
-        text-align: right;
+        /* text-align: right; */
     }
     .dt-local div:last-child {
-        text-align: left;
+        /* text-align: left; */
     }
     .dt-local {
         margin-bottom: 30px;
@@ -832,7 +832,7 @@ body {
 .event-title {
     font-family: Helvetica;
     font-weight: bold;
-    margin-bottom: 12px;
+    margin-bottom: -10px;
     color: #ffffff;
 }
 .event-title span {
@@ -1229,4 +1229,34 @@ footer {
 
 .sponsorships-apoiadores img {
     width: 70%;
+}
+
+/* ==========================================================================
+   @milesibastos's custom styles
+   ========================================================================== */
+
+.bg-white {
+  background-color: rgba(255, 255, 255, 0.10);
+}
+
+.box {
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.responsive-video {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* padding-top: 60px; */
+  overflow: hidden;
+}
+
+.responsive-video iframe,
+.responsive-video object,
+.responsive-video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
